--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <h1> Welcome to Cats </h1>
 
-    <p> Check out this cool site all focused on cats</p>
+    <h2> Check out this cool site all focused on cats</h2>
     
     <p> Chase laser stare at ceiling slap owner's face at 5am until human fills food dish mrow, so give attitude eat all the power cords yet sweet beast. Attack like a vicious monster. Shove bum in owner's face like camera lens. Rub face on owner massacre a bird in the living room and then look like the cutest and most innocent animal on the planet or lick plastic bags cats woo, pushes butt to face yet ears back wide eyed so catty ipsum. I love cuddles 𝕄𝔼𝕆𝕎 and chase dog then run away and cough hairball, eat toilet paper. Catasstrophe warm up laptop with butt lick butt fart rainbows until owner yells pee in litter box hiss at cats. Dont wait for the storm to pass, dance in the rain bring your owner a dead bird and unwrap toilet paper yet show belly.</p>
     
